--- a/ProjectNLP/essay_scoring.ipynb
+++ b/ProjectNLP/essay_scoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -73,31 +73,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import heapq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the dataset\n",
+    "# Load the training data\n",
     "df = pd.read_csv(r'train.csv')\n",
     "df = df[['essay_id', 'full_text', 'score']]\n",
-    "df = df[~df['full_text'].str.contains(\"PROPER_NAME\", na=False)].reset_index(drop=True)"
+    "df = df[~df['full_text'].str.contains(\"PROPER_NAME\", na=False)]\n",
+    "df = df.head(1000).reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,46 +121,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "MemoryError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m         sim \u001b[38;5;241m=\u001b[39m similarity_matrix[i, j]\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m sim \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m1.0\u001b[39m:  \u001b[38;5;66;03m# Exclude potential duplicates\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m             \u001b[43mtop_pairs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msim\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Sort by similarity (highest first)\u001b[39;00m\n\u001b[0;32m     12\u001b[0m top_pairs_sorted \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(top_pairs, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m2\u001b[39m], reverse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mMemoryError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import heapq\n",
-    "\n",
-    "# Max-heap with fixed size: top 5 pairs\n",
     "top_5_heap = []\n",
     "\n",
     "for i in range(similarity_matrix.shape[0]):\n",
     "    for j in range(i + 1, similarity_matrix.shape[0]):\n",
     "        sim = similarity_matrix[i, j]\n",
-    "        if sim >= 0.999:  # Skip near-duplicates\n",
+    "        if sim >= 0.999:  # Skip near-exact duplicates\n",
     "            continue\n",
     "        if len(top_5_heap) < 5:\n",
     "            heapq.heappush(top_5_heap, (sim, i, j))\n",
     "        else:\n",
-    "            heapq.heappushpop(top_5_heap, (sim, i, j))  # Replace if better\n",
-    "\n",
-    "# Sort top 5 by similarity descending\n",
+    "            heapq.heappushpop(top_5_heap, (sim, i, j))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Essay 077377d vs Essay 0c8f97b\n",
+      "Similarity Score: 0.8253\n",
+      "Essay 1 Preview: The Electoral College is a process, not a place. The meaning of Electoral College is stated in Source 1: What is Electoral College and in paragraph 2.\n",
+      "Essay 2 Preview: The Electoral College is not a place, but a process. It was established by the founding fathers in the Constitution. The college consists of electors,\n",
+      "\n",
+      "Essay 07a14a5 vs Essay 0fbd5ba\n",
+      "Similarity Score: 0.8211\n",
+      "Essay 1 Preview: The author's claim of studying Venus is a worthy pursuit because Venus is closely related to Earth, Venus has a enviroment that is similar to Earth, a\n",
+      "Essay 2 Preview: Many look up into the sky and see Venus, one of the brightest points in the night sky. While it looks like a star, it is actually a planet. In fact, i\n",
+      "\n",
+      "Essay 0425a6e vs Essay 098d10a\n",
+      "Similarity Score: 0.8076\n",
+      "Essay 1 Preview: In this article the author is talking about going to Venus. The author explains the reasons why we should explore this planet. The author mentions tha\n",
+      "Essay 2 Preview: The planet Venus may be one of our most valuable assets to understand our planet, but Venus has some dangers we cannot ignore. In \"The Challenge of Ex\n",
+      "\n",
+      "Essay 051c46a vs Essay 0870f09\n",
+      "Similarity Score: 0.8044\n",
+      "Essay 1 Preview: Dear senator,  I have done research and I would like to change the Electoral College to the popular vote for the President of the United States. Sourc\n",
+      "Essay 2 Preview: Changing the election by popluar vote for the President of the United States would be a better option than keeping the Electoral College. Although the\n",
+      "\n",
+      "Essay 02d481d vs Essay 0f81127\n",
+      "Similarity Score: 0.8040\n",
+      "Essay 1 Preview: Dear, Senator  The  Electoral college has been around for centuries and as time changes, things start to evolve and grow along with the time period.  \n",
+      "Essay 2 Preview: It is often said that \"change is good.\" This saying is one way to describe my feelings towards the Electoral College. The sources \"What Is the Elector\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the top 5 pairs\n",
     "top_5 = sorted(top_5_heap, key=lambda x: x[0], reverse=True)\n",
     "\n",
-    "# Display results\n",
     "for sim, i, j in top_5:\n",
     "    print(f\"\\nEssay {df.loc[i, 'essay_id']} vs Essay {df.loc[j, 'essay_id']}\")\n",
     "    print(f\"Similarity Score: {sim:.4f}\")\n",
     "    print(\"Essay 1 Preview:\", df.loc[i, 'full_text'][:150].replace('\\n', ' '))\n",
-    "    print(\"Essay 2 Preview:\", df.loc[j, 'full_text'][:150].replace('\\n', ' '))\n"
+    "    print(\"Essay 2 Preview:\", df.loc[j, 'full_text'][:150].replace('\\n', ' '))"
    ]
   }
  ],
