--- a/ProjectNLP/essay_scoring.ipynb
+++ b/ProjectNLP/essay_scoring.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
     "df = pd.read_csv(r'train.csv')\n",
     "df = df[['essay_id', 'full_text', 'score']]\n",
     "df = df[~df['full_text'].str.contains(\"PROPER_NAME\", na=False)]\n",
-    "# Remove comment to set cap of 1000 essays for testing\n",
+    "# Remove comment to set cap of 1000 essays for testing.\n",
     "#df = df.head(1000).reset_index(drop=True)"
    ]
   },
