--- a/ProjectNLP/essay_scoring.ipynb
+++ b/ProjectNLP/essay_scoring.ipynb
@@ -194,14 +194,13 @@
     }
    ],
    "source": [
-    "# Print the top 5 pairs\n",
     "top_5 = sorted(top_5_heap, key=lambda x: x[0], reverse=True)\n",
     "\n",
     "for sim, i, j in top_5:\n",
-    "    print(f\"\\nEssay {df.loc[i, 'essay_id']} vs Essay {df.loc[j, 'essay_id']}\")\n",
+    "    print(f\"\\nEssay {df.iloc[i]['essay_id']} vs Essay {df.iloc[j]['essay_id']}\")\n",
     "    print(f\"Similarity Score: {sim:.4f}\")\n",
-    "    print(\"Essay 1 Preview:\", df.loc[i, 'full_text'][:150].replace('\\n', ' '))\n",
-    "    print(\"Essay 2 Preview:\", df.loc[j, 'full_text'][:150].replace('\\n', ' '))"
+    "    print(\"Essay 1 Preview:\", df.iloc[i]['full_text'][:150].replace('\\n', ' '))\n",
+    "    print(\"Essay 2 Preview:\", df.iloc[j]['full_text'][:150].replace('\\n', ' '))"
    ]
   }
  ],
