--- a/ProjectNLP/essay_scoring.ipynb
+++ b/ProjectNLP/essay_scoring.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +185,175 @@
     "    print(\"Essay 1 Preview:\", df.iloc[i]['full_text'][:150].replace('\\n', ' '))\n",
     "    print(\"Essay 2 Preview:\", df.iloc[j]['full_text'][:150].replace('\\n', ' '))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This part is used so that I can easily get a full essay to put it in an online comparer. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Essay ID: 29aa983\n",
+      "\n",
+      "Full Essay Text:\n",
+      "\n",
+      "A new hom\n",
+      "\n",
+      "whould you send someone to explore venus with the technology that we haave\n",
+      "\n",
+      "right now? the author of the article\n",
+      "\n",
+      "the challege of exploring venus made some\n",
+      "\n",
+      "very import points about\n",
+      "\n",
+      "why\n",
+      "\n",
+      "we sohould explore venus.\n",
+      "\n",
+      "the author believes that even. that is worthy exploring venus using old tecnology and new tecnology for example. the mechamical computers, NASA's idea of the ships and the new materials that were being testes\n",
+      "\n",
+      "firt of all the author explains the old technology that is used ti be use in\n",
+      "\n",
+      "during\n",
+      "\n",
+      "the 1940 word war two by making\n",
+      "\n",
+      "calculations using\n",
+      "\n",
+      "gears and\n",
+      "\n",
+      "levers. no electronic were needed for this computer. the only problem would be that the the computers are very delicated when is put to extreme conditions.\n",
+      "\n",
+      "secondly the author mentions an idea that NASA\n",
+      "\n",
+      "has that he explains could\n",
+      "\n",
+      "to very useful for exploring venus.\n",
+      "\n",
+      "the author\n",
+      "\n",
+      "explains that venus has a very high temperature but the vehicle would hover\n",
+      "\n",
+      "30 miles over\n",
+      "\n",
+      "from\n",
+      "\n",
+      "the surface of venus where is would\n",
+      "\n",
+      "avoid bad graounds. this idea that\n",
+      "\n",
+      "NASA\n",
+      "\n",
+      "has come up\n",
+      "\n",
+      "to its\n",
+      "\n",
+      "a good way\n",
+      "\n",
+      "for humans\n",
+      "\n",
+      "to vivit\n",
+      "\n",
+      "and explore venus.\n",
+      "\n",
+      "lastly the author believes\n",
+      "\n",
+      "thea venus\n",
+      "\n",
+      "is not\n",
+      "\n",
+      "to\n",
+      "\n",
+      "diferent from earth\n",
+      "\n",
+      "and\n",
+      "\n",
+      "in the right conditions\n",
+      "\n",
+      "humans could\n",
+      "\n",
+      "be living is venus. the author\n",
+      "\n",
+      "mentions how scients\n",
+      "\n",
+      "believed\n",
+      "\n",
+      "that venus.\n",
+      "\n",
+      "is the\n",
+      "\n",
+      "is the planet\n",
+      "\n",
+      "with the more like earth\n",
+      "\n",
+      "and how\n",
+      "\n",
+      "it could posibly at one\n",
+      "\n",
+      "time had\n",
+      "\n",
+      "oceans\n",
+      "\n",
+      "research on venus\n",
+      "\n",
+      "could also explain\n",
+      "\n",
+      "that venus\n",
+      "\n",
+      "at one\n",
+      "\n",
+      "point\n",
+      "\n",
+      "could\n",
+      "\n",
+      "have and\n",
+      "\n",
+      "maintain\n",
+      "\n",
+      "life forms this is why it would be wortly for humanns\n",
+      "\n",
+      "to explore venus because it could posibly be the nex\n",
+      "\n",
+      "earth\n",
+      "\n",
+      "in conclutions\n",
+      "\n",
+      "the author\n",
+      "\n",
+      "brought many points of why\n",
+      "\n",
+      "we sould keed on good\n",
+      "\n",
+      "undertanding about the exploration\n",
+      "\n",
+      "venus.     \n"
+     ]
+    }
+   ],
+   "source": [
+    "essay_id = '29aa983'  # <- target essay ID\n",
+    "\n",
+    "# Find the matching row\n",
+    "row = df[df['essay_id'] == essay_id]\n",
+    "\n",
+    "# Display full essay text\n",
+    "if not row.empty:\n",
+    "    print(\"Essay ID:\", essay_id)\n",
+    "    print(\"\\nFull Essay Text:\\n\")\n",
+    "    print(row.iloc[0]['full_text'])\n",
+    "else:\n",
+    "    print(f\"No essay found with ID {essay_id}\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -203,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
