--- a/ProjectNLP/essay_scoring.ipynb
+++ b/ProjectNLP/essay_scoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
       "1  000fe60  I am a scientist at NASA that is discussing th...      3\n",
       "2  001ab80  People always wish they had the same technolog...      4\n",
       "3  001bdc0  We all heard about Venus, the planet without a...      4\n",
-      "4  002ba53  Dear, State Senator\\r\\n\\r\\nThis is a letter to...      3\n"
+      "4  002ba53  Dear, State Senator\\n\\nThis is a letter to arg...      3\n"
      ]
     }
    ],
@@ -23,7 +23,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load the training data\n",
-    "train_path = r'train.csv'\n",
+    "train_path = r'nlp_project_train.csv'\n",
     "df = pd.read_csv(train_path)\n",
     "\n",
     "# Quick peek at the data\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the training data\n",
-    "df = pd.read_csv(r'train.csv')\n",
+    "df = pd.read_csv(r'nlp_project_train.csv')\n",
     "df = df[['essay_id', 'full_text', 'score']]\n",
     "df = df[~df['full_text'].str.contains(\"PROPER_NAME\", na=False)]\n",
     "# Remove comment to set cap of 1000 essays for testing.\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -151,28 +151,28 @@
       "\n",
       "Essay 29aa983 vs Essay 6d25307\n",
       "Similarity Score: 0.9219\n",
-      " the challege of expor of the articleenus with the technology that we haave\n",
-      " Whould you send someone to explore venus with even if we don't have the technology necessary?The author of the\n",
+      "Essay 1 Preview: A new hom  whould you send someone to explore venus with the technology that we haave  right now? the author of the article  the challege of exploring\n",
+      "Essay 2 Preview: Benefits of Researching a New planet  Whould you send someone to explore venus with even if we don't have the technology necessary?The author of the a\n",
       "\n",
       "Essay 7f55753 vs Essay 9985008\n",
       "Similarity Score: 0.8890\n",
-      " The founding fathers etablished ss, not a place...\n",
+      "Essay 1 Preview: teacher asks:  What is an electoral college?  my answer:  The electoral college is a process, not a place...  The founding fathers etablished it in th\n",
       "Essay 2 Preview: In the first source its explain what a Electoral College is which is not a place it's a process the finding fathers established it in the Constitution\n",
       "\n",
       "Essay 4d0c575 vs Essay e026924\n",
       "Similarity Score: 0.8873\n",
       "Essay 1 Preview: Dear state senator i am writing to you because i would like to try a different way to select the president by using the popular. most states have a \"w\n",
-      " What are the chances in favor of keeping the electoral college or changing to election by popular vote for the president of the unite\n",
+      "Essay 2 Preview: Dear senator,  What are the chances in favor of keeping the electoral college or changing to election by popular vote for the president of the united \n",
       "\n",
       "Essay 7cdf8b2 vs Essay 84a1b1a\n",
       "Similarity Score: 0.8864\n",
-      " Today I am going to write about how electoral colleges work. The Electrical College is a process, not a place. The f\n",
-      " Do you think that we should keep the Electoral College? We should keep the electoral college because the founding fathers estab\n",
+      "Essay 1 Preview: \"Does Electoral College Work?\"  Today I am going to write about how electoral colleges work. The Electrical College is a process, not a place. The fou\n",
+      "Essay 2 Preview: Dear state senator,  Do you think that we should keep the Electoral College? We should keep the electoral college because the founding fathers establi\n",
       "\n",
       "Essay 287ed5e vs Essay 84a1b1a\n",
       "Similarity Score: 0.8773\n",
       "Essay 1 Preview: I think the Electoral college is a good way to vote for the president or vice president because i think without the Electoral college, we wouldn't hav\n",
-      " Do you think that we should keep the Electoral College? We should keep the electoral college because the founding fathers estab\n"
+      "Essay 2 Preview: Dear state senator,  Do you think that we should keep the Electoral College? We should keep the electoral college because the founding fathers establi\n"
      ]
     }
    ],
@@ -195,153 +195,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Essay ID: 29aa983\n",
+      "Essay ID: 6d25307\n",
       "\n",
       "Full Essay Text:\n",
       "\n",
-      "A new hom\n",
+      "Benefits of Researching a New planet\n",
       "\n",
-      "whould you send someone to explore venus with the technology that we haave\n",
+      "Whould you send someone to explore venus with even if we don't have the technology necessary?The author of the article \"The Challenge of Exploring Venus\" has made some good point about why we should send if not but machines to explore Venus.The author believes that it would be beneficial for us to explor Venus using the technology that we have right now and the new technology that it has recently been invented for example:The mechamical computers,The new Idea that NASA has come up to and considering Venus as a moving planet.\n",
       "\n",
-      "right now? the author of the article\n",
+      "First of all the author explains the old use of old technology called mechanical computer.This computers played an important role during the 1940s Word War two by making calculations using gears and levers, no electronics were needed for this computers. The author explains why the computer could be very useful to explore Venus by saying that this computer are very powerful,flexible, and quick. The only problem would be that the computers are very delicated when is put to extreme conditions.\n",
       "\n",
-      "the challege of exploring venus made some\n",
+      "Secondly the author mentions an idea that NASA has come up to that could really help the explorationg of Venus.The author mentions the idea of NASA of making a vehicle that could help the exploration of Venus by Hovering the surface of Venus.The author explains that Venus has a very high temperature but the vehicle would hover 30 miles overand avoid the bad ground. This idea that NASA has come up to its a good way for humans to visit and explore Venus.\n",
       "\n",
-      "very import points about\n",
+      "Lastly the author believes tha Venus is not to different from earth and in the right conditions, humans could be living in Venus. The author mentions how scientists believed that Venus is the planet with the more like earth and how it could posibly at one time had oceans. Research on Venus could also explain that Venus at one point could have and maintain life forms. This is why it would be worthy for humans to explore Venus becuase it could posibly be the next earth.\n",
       "\n",
-      "why\n",
-      "\n",
-      "we sohould explore venus.\n",
-      "\n",
-      "the author believes that even. that is worthy exploring venus using old tecnology and new tecnology for example. the mechamical computers, NASA's idea of the ships and the new materials that were being testes\n",
-      "\n",
-      "firt of all the author explains the old technology that is used ti be use in\n",
-      "\n",
-      "during\n",
-      "\n",
-      "the 1940 word war two by making\n",
-      "\n",
-      "calculations using\n",
-      "\n",
-      "gears and\n",
-      "\n",
-      "levers. no electronic were needed for this computer. the only problem would be that the the computers are very delicated when is put to extreme conditions.\n",
-      "\n",
-      "secondly the author mentions an idea that NASA\n",
-      "\n",
-      "has that he explains could\n",
-      "\n",
-      "to very useful for exploring venus.\n",
-      "\n",
-      "the author\n",
-      "\n",
-      "explains that venus has a very high temperature but the vehicle would hover\n",
-      "\n",
-      "30 miles over\n",
-      "\n",
-      "from\n",
-      "\n",
-      "the surface of venus where is would\n",
-      "\n",
-      "avoid bad graounds. this idea that\n",
-      "\n",
-      "NASA\n",
-      "\n",
-      "has come up\n",
-      "\n",
-      "to its\n",
-      "\n",
-      "a good way\n",
-      "\n",
-      "for humans\n",
-      "\n",
-      "to vivit\n",
-      "\n",
-      "and explore venus.\n",
-      "\n",
-      "lastly the author believes\n",
-      "\n",
-      "thea venus\n",
-      "\n",
-      "is not\n",
-      "\n",
-      "to\n",
-      "\n",
-      "diferent from earth\n",
-      "\n",
-      "and\n",
-      "\n",
-      "in the right conditions\n",
-      "\n",
-      "humans could\n",
-      "\n",
-      "be living is venus. the author\n",
-      "\n",
-      "mentions how scients\n",
-      "\n",
-      "believed\n",
-      "\n",
-      "that venus.\n",
-      "\n",
-      "is the\n",
-      "\n",
-      "is the planet\n",
-      "\n",
-      "with the more like earth\n",
-      "\n",
-      "and how\n",
-      "\n",
-      "it could posibly at one\n",
-      "\n",
-      "time had\n",
-      "\n",
-      "oceans\n",
-      "\n",
-      "research on venus\n",
-      "\n",
-      "could also explain\n",
-      "\n",
-      "that venus\n",
-      "\n",
-      "at one\n",
-      "\n",
-      "point\n",
-      "\n",
-      "could\n",
-      "\n",
-      "have and\n",
-      "\n",
-      "maintain\n",
-      "\n",
-      "life forms this is why it would be wortly for humanns\n",
-      "\n",
-      "to explore venus because it could posibly be the nex\n",
-      "\n",
-      "earth\n",
-      "\n",
-      "in conclutions\n",
-      "\n",
-      "the author\n",
-      "\n",
-      "brought many points of why\n",
-      "\n",
-      "we sould keed on good\n",
-      "\n",
-      "undertanding about the exploration\n",
-      "\n",
-      "venus.     \n"
+      "In conclution the author brought many points of why we sould keep on exploring Venus from technology to even a new planet.The author has a very good understanding about the exploration Venus and believed that it would be a good investment to explore it.\n"
      ]
     }
    ],
    "source": [
-    "essay_id = '29aa983'  # <- target essay ID\n",
+    "essay_id = '6d25307'  # <- target essay ID\n",
     "\n",
     "# Find the matching row\n",
     "row = df[df['essay_id'] == essay_id]\n",
@@ -372,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
